--- a/src/variables/makefile.variables
+++ b/src/variables/makefile.variables
@@ -1,5 +1,5 @@
 
-#LIVENASALHOME = /home/zeegle/workspace/livenasal/
+LIVENASALHOME = /home/hozeegle/workspace/livenasal/
 #HOME = /home/zeegle/workspace/livenasal/
 SRCHOME = $(LIVENASALHOME)/src/
 OBJHOME = $(LIVENASALHOME)/obj/
